# zprize-mobile-harness

./: Cargo.toml  README.md
android/ZPrize/app/src/main/: AndroidManifest.xml
android/ZPrize/app/src/main/assets/: points  scalars
android/ZPrize/app/src/main/java/com/example/zprize/: MainActivity.java  RustMSM.java
src/: lib.rs  main.rs
